--- a/docs/ourExperience/HowWriteMDX.mdx
+++ b/docs/ourExperience/HowWriteMDX.mdx
@@ -10,10 +10,8 @@ title: چگونه mdx بنویسیم
 
 <div dir="ltr">
 
-    ```
     id: mdx
     title: Powered by MDX
-    ```
 
 </div>
 
@@ -26,7 +24,7 @@ title: چگونه mdx بنویسیم
 
 <div dir="ltr">
 
-    ```
+```jsx
     export const Highlight = ({children, color}) => (
     <span style={{
         backgroundColor: color,
@@ -37,7 +35,7 @@ title: چگونه mdx بنویسیم
 
     <Highlight color="#25c2a0">Docusaurus green</Highlight> and <Highlight color="#1877F2">Facebook blue</Highlight> are
     my favorite colors.
-    ```
+```
 
 </div>
 
