--- a/docs/ourExperience/HowWriteMDX.mdx
+++ b/docs/ourExperience/HowWriteMDX.mdx
@@ -12,10 +12,10 @@ slug: /
 
 <div dir="ltr">
 
-    ```
+```mdx
     id: mdx
     title: Powered by MDX
-    ```
+```
 
 </div>
 
@@ -28,7 +28,7 @@ slug: /
 
 <div dir="ltr">
 
-    ```
+```javascript
     export const Highlight = ({children, color}) => (
     <span style={{
         backgroundColor: color,
@@ -39,7 +39,7 @@ slug: /
 
     <Highlight color="#25c2a0">Docusaurus green</Highlight> and <Highlight color="#1877F2">Facebook blue</Highlight> are
     my favorite colors.
-    ```
+```
 
 </div>
 
