add abbr and programming words

--- a/docs/ourExperience/nestjs/nestjs-starter.mdx
+++ b/docs/ourExperience/nestjs/nestjs-starter.mdx
@@ -29,3 +29,31 @@ title: استارتر nest js
 ```
 
 </div>
+
+### چگونه یک controller بسازیم؟
+
+می توان به وسیله دستور زیر یک ماژول بسازیم که به صورت خودکار به ماژول ها اضافه می شود:
+
+<div dir="ltr">
+
+```cmd
+    nest g controller controller-name --no-spec
+```
+
+</div>
+
+--no-spec برای غیرفعال سازی تست نویسی می باشد.
+
+### چگونه یک service بسازیم؟
+
+می توان به وسیله دستور زیر یک ماژول بسازیم که به صورت خودکار به ماژول ها اضافه می شود:
+
+<div dir="ltr">
+
+```cmd
+    nest g service service-name --no-spec
+```
+
+</div>
+
+--no-spec برای غیرفعال سازی تست نویسی می باشد.
