change grammar style

--- a/docs/ourExperience/english/programming-words/programming-words.mdx
+++ b/docs/ourExperience/english/programming-words/programming-words.mdx
@@ -16,5 +16,7 @@ title: کلمات انگلیسی آموزش ها
 | rather     |   بلکه   |
 | demonstrate     |   نشان دادن   |
 | retrieve     |   پس گرفتن, بازیابی   |
+| negligible     |   ناچیز, جزئي   |
+| applicable     |   مناسب, خوب   |
 
 </div>
