make some change in doc

--- a/docs/ourExperience/HowWriteMDX.mdx
+++ b/docs/ourExperience/HowWriteMDX.mdx
@@ -7,7 +7,7 @@ slug: /
 
 ### برای اینکار به صورت زیر عمل میکنیم:
 
-1. یک فایل در فولدر `docs` با فرمت mdx می سازیم
+1. یک فایل در فولدر `docs` و در فولدر ourExperience با فرمت mdx می سازیم
 2. حال داخل آن باید یک id و یک title برای آن بنویسیم
 
 <div dir="ltr">
