--- a/docs/ourExperience/english/programming-words/programming-words.mdx
+++ b/docs/ourExperience/english/programming-words/programming-words.mdx
@@ -18,5 +18,7 @@ title: کلمات انگلیسی آموزش ها
 | retrieve     |   پس گرفتن, بازیابی   |
 | negligible     |   ناچیز, جزئي   |
 | applicable     |   مناسب, خوب   |
+| leverage     |   قدرت نفوذ, اهرم   |
+| Disclaimer     |   سلب مسئولیت   |
 
 </div>
