add some change in grammar.mdx

--- a/docs/ourExperience/english/grammar.mdx
+++ b/docs/ourExperience/english/grammar.mdx
@@ -7,21 +7,21 @@ title: چکیده گرامر انگلیسی-1
 
 **ضمیر** جانشین اسم می شود و از تکرار اسم جلوگیری می کند و ضمائر فاعلی در جایگاه فاعل و در اول جمله قرار می گیرند:
 
-I / You / He / She / It / We / They
+**I / You / He / She / It / We / They**
 
  افعال Tobe در زمان حال:
 
  **Am / Is / Are**
 
- 1.فعل **am** برای ضمیر فاعلی **I** بکار می رود:
+ 1.فعل **`am`** برای ضمیر فاعلی **I** بکار می رود:
 
  I am a student ------------ I'm a student
 
-  2.فعل **is** برای ضمائر فاعلی **He, She, It** و **سوم شخص مفرد** بکار می رود:
+  2.فعل **`is`** برای ضمائر فاعلی **He, She, It** و **سوم شخص مفرد** بکار می رود:
 
  Ali is a manager ------------ Ali's a manager
 
-  3.فعل **are** برای ضمائر فاعلی **We, You, They** و **فاعل های جمع** بکار می رود:
+  3.فعل **`are`** برای ضمائر فاعلی **We, You, They** و **فاعل های جمع** بکار می رود:
 
  You are teachers ------------ You're teachers ------------ Ali and sara are students
 
