--- a/docs/ourExperience/english/grammar/grammar.mdx
+++ b/docs/ourExperience/english/grammar/grammar.mdx
@@ -64,3 +64,115 @@ title: چکیده گرامر-1
 :::caution
 
 عبارت **`am not`** شکل مخفف ندارد.
+
+:::
+<br/>
+<br/>
+
+## اسامی عام و خاص
+
+**اسم** برای نامیدن کسی، چیزی یا جایی استفاده می شود.
+
+### `جمع عام`
+
+✨ **`اسامی عام`** بر همه افراد، اشیا و مکان ها دلالت می کند: مثل ( **apple / book / glass** )
+
+برای جمع بستن اسم عام کافیست به انتهای آن **`s`** اضافه کنیم:
+
+<div dir="ltr">
+
+    apples / books / jungles
+
+</div>
+
+✨✨ اگر حرف آخر اسم، یکی از حروف **`s , x , sh , ch`** باشد باید به آخر آن ها **`es`** اضافه کنیم:
+
+<div dir="ltr">
+
+    glasses / speeches
+
+</div>
+
+✨✨ در جمع بستن اسم عام، اگر حرف آخر، **`o`** باشد، اغلب **`es`** اضافه می شود:
+
+<div dir="ltr">
+
+    Potato ==> potatoes
+
+</div>
+
+✨✨ اگر حرف آخر **`y`** باشد، حرف **`y`** به **`ie`** تبدیل می شود و سپس **`s`** اضافه می کنیم:
+
+<div dir="ltr">
+
+    Baby ==> babies  ------------  lady ==> ladies
+
+</div>
+
+✨✨ اگر حرف آخر اسم، یکی از حروف **`f , p , k , t`** باشد به شکل **`س`** و در غیر اینصورت به شکل **`ز`** تلفظ میشود:
+
+<div dir="ltr">
+
+    books - cats  ------------  doors - walls
+
+</div>
+
+### `جمع خاص`
+
+✨ **`اسامی خاص`** بر شی، شخص و مکان خاصی دلالت می کند و قابل حمع بستن نیستند و حتما باید حرف اول آن ها با حروف بزرگ نوشته شود:
+
+<div dir="ltr">
+
+    Reza / Iran / Farhadi
+
+</div>
+
+ ✨✨ استثنا ها در اسامی جمع اینگونه هستند که اگر حرف آخر آن ها، صدای **`ف`** بدهد، حرف آخر آن به **`v`** تبدیل می شود:
+
+<div dir="ltr">
+
+    Knife ==> knives  ------------  Leaf ==> leaves
+
+</div>
+
+ ✨✨ بعضی از اسامی هم برای جمع بستن قاعده خاصی ندارند:
+
+<div dir="ltr">
+
+    man ==> men  ------------  foot ==> feet  ------------  child ==> children
+
+</div>
+
+## حروف تعریف معین و نامعین
+
+حروف تعریف قبل از اسامی عام قرار می گیرند و برای معین یا نامعین بودن اسم هستند
+
+### `حروف تعیین نامعین`
+
+✨ شامل 2 حرف **`a`** و **`an`** میباشد و به معنای **`یک`** می باشند.
+
+برای صحبت در مورد یک چیز نامشخص یا صحبت در مورد یک عنوان شغلی یا صحبت در مورد چیزی برای اولین بار می باشد:
+
+<div dir="ltr">
+
+    I saw a bird ------------ I ate an apple ------------ She is a nurse
+
+</div>
+
+✨✨ حروف تعیین نامعین برای اسامی مفرد و قابل شمارش به کار می روند.
+
+✨✨ اگر اسامی ما با یکی از حروف **`i , o , u , e, a`** ( **صدادار** ) باشد از **`an`** در غیر این صورت از **`a`** استفاده می شود.
+
+### `حروف تعیین معین`
+
+✨ شامل حرف **`the`** می باشد.
+
+برای صحبت در مورد یک چیز معین و شناخته شده یا صحبت در مورد چیزی که قبلا به آن اشاره شده است:
+
+<div dir="ltr">
+
+    I saw a bird ==> The bird was white.
+
+</div>
+
+✨✨ حرف تعیین **`the`** برای اسامی مفرد و جمع، قابل شمارش و غیر قابل شمارش به کار می رود.
