add some word to programming-words page

--- a/docs/ourExperience/english/programming-words/programming-words.mdx
+++ b/docs/ourExperience/english/programming-words/programming-words.mdx
@@ -20,5 +20,14 @@ title: کلمات انگلیسی آموزش ها
 | applicable     |   مناسب, خوب   |
 | leverage     |   قدرت نفوذ, اهرم   |
 | Disclaimer     |   سلب مسئولیت   |
+| in contrast     |   متقابلا، در مقابل   |
+| approach     |   رویکرد   |
+| absence      |   فقدان   |
+| reduction       |   کاهش   |
+| majority        |   اکثریت   |
+| consider         |   در نظر گرفتن   |
+| ambitious         |   بلند پروازانه، جاه طلب   |
+| bottleneck          |   تنگنا   |
+| leveraging           |   اهرم کردن   |
 
 </div>
