--- a/docs/ourExperience/english/grammar/grammar2.mdx
+++ b/docs/ourExperience/english/grammar/grammar2.mdx
@@ -139,4 +139,66 @@ title: چکیده گرامر-2
 
 </div>
 
-✨ اگر فاعل جمله ضمائر 
+✨ اگر فاعل جمله ضمائر `it`, `she` ,`he` و `سوم شخض مفرد` باشد، به آخر فعل، `s` یا `es` اضافه می کنیم:
+
+<div dir="ltr">
+
+    She likes animals.
+    Ali works in an office.
+    The cat wants milk.
+
+</div>
+
+### `قیود در زمان حال ساده`
+
+رایج ترین قیود در زمان حال ساده:
+
+**every day / every morning / every week / every month**
+
+<div dir="ltr">
+
+    I go to school every day.
+    He works every week.
+
+</div>
+
+### `منفی کردن`
+
+✨ برای منفی کردن زمان حال ساده:
+
+باید از 2 فعل منفی شده `do not (don't)` و `does not (doesn't)` استفاده کنیم و اگر فاعل جمله یکی از ضمائر `it`, `she` ,`he` و `سوم شخض مفرد` باشد، باید از `does not` و اگر `you`, `we` ,`they`, `i` و `غیر سوم شخض مفرد` باشد، از `do not` استفاده می کنیم
+
+✨✨ هنگام استفاده از **does**، باید `s` و `es` اضافه شده به فعل را حذف کنیم:
+
+<div dir="ltr">
+
+    You like animals ------------ You do not like animals.
+    Ali works in a shop ------------ Ali does not work in a shop.
+
+</div>
+
+### `سوالی کردن`
+
+✨ برای سوالی کردن زمان حال ساده:
+
+برای ضمائر `it`, `she` ,`he` و `سوم شخض مفرد`، از `does` و برای `you`, `we` ,`they`, `i` و `غیر سوم شخض مفرد`، از `do` استفاده می کنیم
+
+✨✨ هنگام استفاده از **does**، باید `s` و `es` باید از فعل حذف شود:
+
+<div dir="ltr">
+
+    She walks to home every day. ------------ Does she walk to home every day?
+    They go traveling every month. ------------ Do they go traveling every month?
+
+</div>
+
+✨ هنگام سوالی کردن با **wh** دار ها باید:
+
+کلمه پرسشی را ابتدای جمله قرار داد، بعد از آن از `do` و `does` استفاده می کنیم و حتما پاسخ را از جمله سوالی حذف می کنیم:
+
+<div dir="ltr">
+
+    He goes to park today. ------------ When does he go to park?
+    They go to cinema. ------------ Where do they go?
+
+</div>
