completed docker-react

--- a/docs/ourExperience/docker/docker-react.mdx
+++ b/docs/ourExperience/docker/docker-react.mdx
@@ -11,13 +11,15 @@ author: mamadfar
 <div dir="ltr">
 
 ```docker
-    FROM node:14
+    FROM node:14.17.3-alpine3.14
     WORKDIR /hami-dashboard
     ENV PATH="./node_modules/.bin:$PATH"
     COPY . ./
     RUN npm install
     RUN npm run build
+    RUN npm rebuild node-sass
     CMD ["npm", "start"]
+    EXPOSE 3010
 ```
 
 </div>
@@ -33,6 +35,8 @@ author: mamadfar
 `RUN`: دستور های مورد نیاز را در این قسمت قرار می دهیم تا بعد از کپی شدن، اجرا شوند.
 
 `CMD`: آخرین دستور مورد نیاز برای اجرا شدن برنامه می باشد ک باید آرایه ای از کلمات ( مثلا دستور بالا موقع اجرا شدن به **npm start** تبدیل می شود ).
+
+`EXPOSE`: پورت مورد نظر برای اجرا شدن برنامه را مشخص می کنیم.
 
 🎉 حال توسط دستور زیر می توان **Dockerfile** را اجرا کنیم:
 
@@ -66,6 +70,67 @@ author: mamadfar
 
 و بعد از **-d** نام **image** ساخته شده را باید درست وارد کنیم.
 
+## docker-compose
+
+برای بهتر کردن اجرا شدن **dockerFile** و هم چنین اجرا چند **Service** و چند **app** همزمان با هم از **docker-compose** استفاده می کنیم و همچنین به ما این امکان را می دهد که **image** هایمان را راحت تر انتقال دهیم
+
+که برای **react** می توان از کد زیر استفاده کرد:
+
+<div dir="ltr">
+
+```docker
+    version: "3.9"
+    services:
+        hdreact:
+            build:
+                context: .
+            volumes:
+                - .:/hami-dashboard
+            ports:
+                - 3010:3000
+            image: hdreact:react
+            container_name: hami-dashboard
+            stdin_open: true
+            # command: npm start
+            restart: unless-stopped
+```
+
+</div>
+
+`version`: در واقع ورژن خود **docker-compose** می باشد.
+
+`services`: لیست سرویس های ما می باشند که هر سرویس باید یک نام داشته باشد.
+
+`hdreact`: نام **service** ما می باشد که تمامی موارد مربوط به این سرویس باید زیر آن با فاصله قرار بگیرد.( نام دلخواه می باشد. )
+
+`build`: مسیر و نام **dockerFile** خود را قرار می دهیم که در اینجا برای مسیردهی از `context` استفاده می کنیم و آدرس **dockerFile** را می دهیم.
+
+`volumes`: مسیر فایل هایی که می خواهیم به صورت داینامیک تغییرات را اعمال کنند، مشخص می کنیم. یعنی در کد های داخل سیستم هر تغییری ایجاد شود، در داکر نیز تغییر اعمال شود. ( در اینجا کل فایل پروژه می باشد )
+
+`ports`: می توان برای هر پورت **app** مان یک پورت جایگزین قرار دهیم تا در داکر با یک پورت دیگر اجرا شود.( سمت چپ پورت دلخواهمان که می خواهیم اشغال شود و سمت راست پورت **app** مان می باشد که داخل داکر اجرا می شود، یعنی پورت **3000** را به **3010** عوض کن. )
+
+`image`: یک نام دلخواه برای **image** مان می باشد که بهتر است هم نام **service** مان باشد.( که اولی نام **image** و دومی **tag** آن می باشد )
+
+`container_name`: یک نام دلخواه برای کانتینر مان می باشد.
+
+`stdin_open`: مربوط به **react** می باشد که با هر تغییر سریع صفحه رفرش شود.
+
+`command`: به جای `CMD` در **dockerFile**، می توان در **docker-compose** هم از آن استفاده کرد.
+
+`restart`: توسط این دستور، کانتینری که استاپ می شود، دوباره **restart** می شود، به صورت خودکار.
+
+🎉 فاصله ها در **docker-compose** بسیار مهم می باشد.
+
+حال توسط دستور زیر می توان پروژه را **build** می کنیم و همزمان اجرا نیز می شود:
+
+<div dir="ltr">
+
+```cmd
+    docker-compose up -d
+```
+
+</div>
+
 ## موارد اضافه
 
 🎉 توسط دستور زیر می توان لیست **image** ها را دید:
@@ -91,3 +156,16 @@ author: mamadfar
 ```
 
 </div>
+
+🎉 می توان توسط دستور زیر ( هنگامی که **image** داریم) دوباره پروژه را **rebuild** کنیم:
+
+<div dir="ltr">
+
+```docker
+    docker-compose up -d --force-recreate --build
+```
+
+</div>
+
+
+
