add docker and nginx and did some change on whole doc

--- a/docs/ourExperience/react/good-stuff1.mdx
+++ b/docs/ourExperience/react/good-stuff1.mdx
@@ -19,3 +19,9 @@ title: نکات react - بخش 1
 ```
 
 </div>
+
+### etc
+
+🎉 توسط دکمه های `WINDOWS + V` می توان **clipboard** را باز کرد.
+
+🎉 توسط دکمه های `WINDOWS + SHIFT + S` می توان **print screen** گرفت.
