--- a/docs/ourExperience/docker/docker-react.mdx
+++ b/docs/ourExperience/docker/docker-react.mdx
@@ -1,6 +1,6 @@
 ---
 id: docker-react
-title: docker-react
+title: docker-nginx-react
 author: mamadfar
 ---
 
@@ -30,7 +30,7 @@ author: mamadfar
 
 `ENV PATH`: مسیر ماژول های استفاده شده می باشد ک برای **JS** باید مسیر **node_modules** داده شود.
 
-`COPY`: آرگومان اول مسیر و نام فایل مورد نظر می باشد و آرگومان دوم مسیر فولدر مورد نظر در داکر می باشد ( فایل ها کپی می شوند و در داکر الصاق می شوند ).
+`COPY`: آرگومان اول مسیر و نام فایل مورد نظر می باشد و آرگومان دوم مسیر فولدر مورد نظر در داکر می باشد ( فایل ها کپی می شوند و در داکر الصاق می شوند ). در واقع نقطه دوم همان **WORKDIR** می باشد.
 
 `RUN`: دستور های مورد نیاز را در این قسمت قرار می دهیم تا بعد از کپی شدن، اجرا شوند.
 
@@ -93,6 +93,8 @@ author: mamadfar
             stdin_open: true
             # command: npm start
             restart: unless-stopped
+            # networks:
+            # - app-network
 ```
 
 </div>
@@ -118,6 +120,8 @@ author: mamadfar
 `command`: به جای `CMD` در **dockerFile**، می توان در **docker-compose** هم از آن استفاده کرد.
 
 `restart`: توسط این دستور، کانتینری که استاپ می شود، دوباره **restart** می شود، به صورت خودکار.
+
+`networks`: توسط این دستور می توان **service** های مختلف را در یک کانتینر با **network** های مختلف استفاده کرد، برای مثال می توان در 2 نتورک مختلف در یک کانتینر از یک **port** استفاده کرد ( مثلا 80 ) و چون **network** ها با هم متفاوت هستند هر 2 پورت کار میکنند.
 
 🎉 فاصله ها در **docker-compose** بسیار مهم می باشد.
 
@@ -149,10 +153,13 @@ author: mamadfar
 
 ```
     node_modules
-    build
-    .dockerignore
     Dockerfile
     Dockerfile.prod
+    .git
+    .dockerignore
+    .gitignore
+    .env
+    *.tar
 ```
 
 </div>
@@ -167,5 +174,94 @@ author: mamadfar
 
 </div>
 
+مهم: همیشه سعی شود اول package.json را کپی و سپس نصب کنیم ( در داکرفایل )، زیرا ما خیلی کم فایل package.json را تغییر می دهیم و اگر آن را به داکر فایل اضافه نکنیم، هر بار ک کد های مثلا src را تغییر دهیم، دوباره npm install اجرا می شود.
 
+برای حذف یک image خاص می توان از دستور زیر استفاده کرد:( برای بدست آوردن کد هر image میتوان از  docker image ls استفاده کرد )
+
+docker image rm 26sadf564
+
+در واقع ما برای اینکه اپپ مان از دنیای بیرون هم به آن دسترسی داشته باشیم ( مثلا بقیه سیستم هایی که به اینترنت ما متصل هستند ) آن را ببینند باید برای آن پورت تعیین شود و مشخص شود که چ پورتی از دنیای داخل داکر باید اطلاعات را به چ پورتی از دنیای بیرون بفرستد.
+
+برای اینکه یک کانتینر را ببینیم از دستور docker ps و برای متوقف کردن و حذف یک کانتینر ک در حال اجرا است از دستور docker rm react-app -f استفاده می کنیم
+
+همیشه عدد سمت راست : عددی است ک مربوط به خود docker می باشد و عدد سمت چپ : همیشه مربوط به لوکال ماشین ما می باشد، مثل ویندوز و سیستم هایی ک به اینترنت ما متصل هستند. یعنی مثلا هرکسی در اینترنت من ( local machine ) با 3010 میتواند اطلاعات بفرستد یا بگیرد و داکر هم این درخواست ها را به درگاه 3000 انتقال می دهد ک در این مثال، react میباشد.
+
+دستور docker exec -it react-app bash در واقع محیط bash را در کانتینر مربوطه باز می کند.
+
+
+### nginx and docker-compose
+
+🎉 می توان توسط کانفیگ زیر در docker-compose از 2 سرویس مجزا مانند node و nginx همزمان برای یک کانتینر خاص استفاده کرد:
+
+<div dir="ltr">
+
+```docker-compose
+    version: "3"
+    services:
+        hdreact:
+            build:
+                context: .
+            volumes:
+                - .:/hami-dashboard
+            ports:
+                - 8081:8081
+            image: hdreact:react
+            container_name: hami-dashboard
+            stdin_open: true
+            # environment:
+            #     SERVICE_NAME: node
+            #     SERVICE_TAGS: react
+            # command: npm start
+            environment:
+                NODE_ENV: production
+            restart: unless-stopped
+
+        #Nginx Service
+        webserver:
+        image: nginx:alpine
+        container_name: nginx
+        restart: unless-stopped
+        tty: true
+        ports:
+            - "4000:8081"
+            #  - "443:443"
+            #  - "9001-9009:9001-9009"
+        volumes:
+            - ./:/var/www
+            - ./nginx/conf.d/:/etc/nginx/conf.d/
+        # networks:
+        # - app-network
+```
+
+</div>
+
+🎉 همچنین می توان از کانفیگ dockerFile زیر نیز استفاده کرد برای مچ کردن آن با docker-compose و همچنین بخش **stage 2** نیز می توان برای nginx در داکرفایل استفاده کرد ک کامنت می باشد، اما بهتر است ک در docker-compose باشد.
+
+<div dir="ltr">
+
+```dockerFile
+    # stage1 - build react app first
+    FROM node:14.17.3-alpine3.14 as build
+    WORKDIR /hami-dashboard
+    ENV PATH=/node_modules/.bin:$PATH
+    COPY package.json ./
+    RUN npm install
+    RUN npm rebuild node-sass
+    COPY . ./
+    # RUN npm run build
+    # CMD [ "npm", "run", "build" ]
+    #COPY build ./
+
+    # stage 2 - build the final image and copy the react build files
+    # FROM nginx:1.17.8-alpine
+    # # COPY --from=build /hami-dashboard/build /usr/share/nginx/html
+    # COPY --from=build /hami-dashboard/build /var/www/
+    # # COPY --from=build /hami-dashboard/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+    # RUN rm /etc/nginx/conf.d/default.conf
+    # COPY nginx/nginx.conf /etc/nginx/conf.d
+    # CMD ["nginx", "-g", "daemon off;"]
+    EXPOSE 8081
+```
+
+</div>
 
