add vue folder to the doc

--- a/docs/ourExperience/react/good-stuff1.mdx
+++ b/docs/ourExperience/react/good-stuff1.mdx
@@ -20,8 +20,40 @@ title: نکات react - بخش 1
 
 </div>
 
+### ENV.
+
+🎉 هرگاه بخواهیم در **React** از **env.** استفاده کنیم، کافیست یک فایل **env.** در روت پروژه بسازیم ( بهتر است ابتدا پکیج آن را نیز برای اطمینان نصب کنیم : `yarn add dotenv -D` )، حال میتوان توسط الگو زیر، از آن استفاده کنیم:
+
+<div dir="ltr">
+
+```env
+    SKIP_PREFLIGHT_CHECK=true
+    REACT_APP_BASENAME= ""
+    REACT_APP_SECRET_NAME = mamad
+```
+
+</div>
+
+حتما باید با **_REACT_APP** شروع شود و حتما بعد از تغییر **env.** باید اپ را دوباره ران کنیم.
+همچنین برای دستری به این فایل می توان در کدمان به این صورت به آن دسترسی داشته باشیم:
+
+<div dir="ltr">
+
+    ```JSX
+    console.log(process.env.REACT_APP_SECRET_NAME)
+    ```
+
+</div>
+
+🎉🎉 بهتر است که در **gitignore.** نیز آن را قرار دهیم.
+
+منبع: [create-react-app](https://create-react-app.dev/docs/adding-custom-environment-variables/)
+
 ### etc
 
 🎉 توسط دکمه های `WINDOWS + V` می توان **clipboard** را باز کرد.
 
 🎉 توسط دکمه های `WINDOWS + SHIFT + S` می توان **print screen** گرفت.
+
+🎉 هرگاه بخواهیم ارور ها به **Interceptors** خود **Axios** ارسال شود، حتما باید ارور را در **()catch** درخواستمان برگردانیم ( **return** ).
+
