add bem and some other doc to the project

--- a/docs/ourExperience/hints/hint-1.mdx
+++ b/docs/ourExperience/hints/hint-1.mdx
@@ -13,3 +13,15 @@ author: mamadfar
 حالا توو صفحه جدید باید گزینه **SSH configuration** را انتخاب می کنیم و دوباره **+** رو میزنیم و بعد باید **username** و مابقی اطلاعات مربوط به سرور و اتصال به آن رو وارد میکنیم.
 
 حالا هر وقت بخوایم می تونیم فولدر مورد نظر رو انتخاب کنیم و **deployment** رو بزنیم و **upload to server** رو بزنیم.
+
+### kill-port
+
+توسط این پکیج می توان یک `port` خاص را کامل بست.
+
+<div dir="ltr">
+
+```cmd
+    npx kill-port 3000
+```
+
+</div>
