--- a/docs/ourExperience/react/tsx/ts-in-react.mdx
+++ b/docs/ourExperience/react/tsx/ts-in-react.mdx
@@ -1,13 +1,11 @@
 ---
 id: ts-in-react
-title: تایپ اسکریپت در React
+title: TS in React
 ---
 
 ### props
 
 می توان به صورت زیر کامپوننت و `prop` ها در `tsx` استفاده کرد، در واقع در این روش می توان هم برای `prop` و هم برای کامپوننت `type` مشخص کرد:
-
-<div dir="ltr">
 
 ```tsx
 
@@ -45,8 +43,6 @@ title: تایپ اسکریپت در React
 
 ```
 
-</div>
-
 که روش دوم بهتر است زیرا `ts` متوجه کامپوننت می شود.
 
 🎉 برای استفاده از `children` در  `tsx` بهتر است از روش دوم استفاده شود زیرا `ts` کامپوننت را می شناسد، در روش اول باید حتما در `interface` حتما `children` را تعریف کنیم.
@@ -54,9 +50,6 @@ title: تایپ اسکریپت در React
 ### state
 
 برای تعریف `type` برای `state` ها میتوان به صورت زیر عمل کرد و برای هر `useState` از یک `generic` خاص استفاده کرد:
-
-
-<div dir="ltr">
 
 ```tsx
 
@@ -73,15 +66,11 @@ const GuestList: React.FC = () => {
 
 ```
 
-</div>
-
 🎉 اگر این کار را انجام ندهیم، خود `ts` برای متغییری مثل `guests` از تایپ `[]never` استفاده می کند
 
 ### Union
 
 در `react ` هم می توان از `union` تایپ ها نیز استفاده کرد ک بسیار کاربردی می باشد، زمانی ک بخواهیم مشخص کنیم ک یک متغییر امکان دارد ک چند تایپ داشته باشد، از آن استفاده می کنیم:
-
-<div dir="ltr">
 
 ```tsx
 
@@ -89,13 +78,9 @@ const GuestList: React.FC = () => {
 
 ```
 
-</div>
-
 ### event
 
 برای اینکه از `event` در توابع خود استفاده کنیم، باید حتما تایپ را برای آن ها نیز مشخص کنیم:
-
-<div dir="ltr">
 
 ```tsx
 
@@ -119,15 +104,11 @@ const EventComponent: React.FC = () => {
 
 ```
 
-</div>
-
 🎉 برای راحتی کار، میتوان موس را روی `event` مورد نظر قرار داد و تایپ مربوط  به آن را کپی کنیم و در تابع خود استفاده کنیم.
 
 ### ref
 
 برای `ref` نیز باید تایپ تگی که به آن رفرنس زدیم را مشخص کنیم و مقدار اولیه آن را `null` قرار دهیم، زیرا هنگام لود شدن، به چیزی رفرنس نمی شود:
-
-<div dir="ltr">
 
 ```tsx
 
@@ -135,7 +116,6 @@ const EventComponent: React.FC = () => {
 
 ```
 
-</div>
 
 
 
