--- a/docs/ourExperience/react/good-stuff1.mdx
+++ b/docs/ourExperience/react/good-stuff1.mdx
@@ -7,8 +7,6 @@ title: نکات react - بخش 1
 
 توسط کد زیر می توان از **`Re-render`** چند باره کامپوننت ها جلوگیری کرد:
 
-<div dir="ltr">
-
 ```js
     import React from "react"
 
@@ -18,32 +16,22 @@ title: نکات react - بخش 1
     });
 ```
 
-</div>
-
 ### ENV.
 
 🎉 هرگاه بخواهیم در **React** از **env.** استفاده کنیم، کافیست یک فایل **env.** در روت پروژه بسازیم ( بهتر است ابتدا پکیج آن را نیز برای اطمینان نصب کنیم : `yarn add dotenv -D` )، حال میتوان توسط الگو زیر، از آن استفاده کنیم:
 
-<div dir="ltr">
-
-```env
+```text
     SKIP_PREFLIGHT_CHECK=true
     REACT_APP_BASENAME= ""
     REACT_APP_SECRET_NAME = mamad
 ```
 
-</div>
-
 حتما باید با **_REACT_APP** شروع شود و حتما بعد از تغییر **env.** باید اپ را دوباره ران کنیم.
 همچنین برای دستری به این فایل می توان در کدمان به این صورت به آن دسترسی داشته باشیم:
 
-<div dir="ltr">
-
-```JSX
+```jsx
     console.log(process.env.REACT_APP_SECRET_NAME)
 ```
-
-</div>
 
 🎉🎉 بهتر است که در **gitignore.** نیز آن را قرار دهیم.
 
@@ -64,47 +52,33 @@ title: نکات react - بخش 1
 3. `defaultProps`
 4. `contextTypes`
 
-<div dir="ltr">
-
-``` jsx
+```tsx
     interface ChildProps {
     color: string;
 }
-
     export const Child = ({color}: ChildProps) => {
     return <h1>{color}</h1>
 }
-
     Child.defaultProps = {
     color: "blue"
 }
-
-    OR
-
+    //! OR
     export const ChildAsFC : React.FC<ChildProps> = ({color}) => {
     return <div>{color}</div>
 }
-
     ChildAsFC.defaultProps = {
         color: "green"
     }
 ```
 
-</div>
-
 🎉 برای اینکه یک خط کد را در شرایطی ک مقدار موجود `falsy` می باشد، نخواهیم اجرا کنیم، از `type guard` استفاده می کنیم:
 
-<div dir="ltr">
-
-``` jsx
-
+```jsx
     useEffect(() => {
         if(!inputRef.current) {
             return;
         }
         inputRef.current.focus()
     }, [])
-
 ```
 
-</div>
