add test in react and some other

--- a/docs/ourExperience/dependencies/auth0.mdx
+++ b/docs/ourExperience/dependencies/auth0.mdx
@@ -3,7 +3,11 @@ id: auth0
 title: Auth0 in React
 ---
 
-در واقع `auth0` یک پکیج می باشد ک توسط آن می توان لاگین و رجیستر سایت خودمان را به راحتی بسازیم.
+در واقع `auth0` یک پکیج می باشد ک توسط آن می توان لاگین و رجیستر سایت خودمان را به راحتی بسازیم و برای نصب باید از کد زیر استفاده کنیم:
+
+```text
+yarn add @auth0/auth0-react
+```
 
 1. برای شروع باید ابتدا وارد سایت آن شویم و در آنجا ثبت نام کنیم
 2. سپس به تب `Applications` می رویم و روی `Applications` کلیک میکنیم
